WIP app navigation

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,6 +3,8 @@
   "common.search.placeholder": "Search {label}",
   "common.save.button": "Save",
   "common.cancel.button": "Cancel",
+  "app.nav.home": "Home",
+  "app.nav.library": "Library",
   "profile.title": "My Profile",
   "profile.edit.button": "Edit My Profile",
   "profile.avatar.button": "Change Photo",
